# AstroFetch

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Build Plan - Open Source Projects.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Open Source Projects Claude.md  Open Source Projects.md  README.md  devenv.nix  index.html  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_dataset.yml
.github/workflows/: check.yaml  ci.yml  docs.yaml  lint.yaml  test.yaml  typecheck.yaml
docs/: index.md  roadmap.md
docs/reference/: catalog.md  data.md  datasets.md  granules.md
roadmap/: index.html
search/: search_index.json
src/astrofetch/: __init__.py  errors.py
src/astrofetch/data/: __init__.py  cache.py  endpoints.py  grid.py  ode.py  raster.py  stac.py
src/astrofetch/moon/: __init__.py  datasets.py  granules.py  layers.py
tests/: test_datasets.py
tests/fixtures/ode/: error.json  multi_product.json  no_products.json  phase_c_listings.json  single_product.json
tests/live/: test_endpoints_live.py  test_pds_ode_live.py
tests/unit/: test_cache.py  test_datasets.py  test_granules.py  test_grid.py  test_ode.py  test_raster.py  test_stac.py
