[project]
name = "astrofetch"
version = "0.1.0"
description = "PyTorch-friendly, ML-ready access to planetary science data, starting with the Moon."
readme = "README.md"
authors = [{ name = "Tom Sander", email = "tom.sander@tu-dortmund.de" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["numpy>=1.24", "torch>=2.0"]

[project.urls]
Homepage = "https://github.com/TechnicToms/AstroFetch"
Repository = "https://github.com/TechnicToms/AstroFetch"

[dependency-groups]
dev = ["pyright>=1.1", "ruff>=0.4", "ty>=0.0.57"]
test = ["pytest>=8.0", "pytest-cov>=4.1"]
docs = ["mkdocs-material>=9.5"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pyright]
exclude = [".venv"]

[tool.ty.environment]
python = "./.venv"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
  "live: hits real network endpoints; deselected by default (run with 'pytest tests/live -m live')",
]
